# BrisHandicapper

./: README.md  pyproject.toml
data/processed/: current_race_info.parquet  parsed_race_data_full.parquet  past_starts_long_format.parquet  workouts_long_format.parquet
data/raw/: CDX0628.DRF
src/bris_handicapper/: handicap.py  main.py
src/bris_handicapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/bris_handicapper/analysis/: contender_filter.py  grouper.py  situational_analyzer.py
src/bris_handicapper/data_processing/: bris_spec_new.py  current_race_info.py  long_format_transformer.py
src/bris_handicapper/reporting/: reporter.py
src/config/: config.py  data_mappings.py  paths.py  settings.py
src/data_loader/: data_loader.py
